@@ -1,30 +1,54 @@
 package org.antlr.v4.runtime.tree.xpath;
 
+import org.antlr.v4.runtime.ANTLRInputStream;
+import org.antlr.v4.runtime.CommonTokenStream;
+import org.antlr.v4.runtime.LexerNoViableAltException;
 import org.antlr.v4.runtime.Parser;
 import org.antlr.v4.runtime.ParserRuleContext;
+import org.antlr.v4.runtime.Token;
 import org.antlr.v4.runtime.misc.Utils;
 import org.antlr.v4.runtime.tree.ParseTree;
 
+import java.io.IOException;
+import java.io.StringReader;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
-/** Represent a subset of XPath path syntax for use in identifying nodes in
+/** Represent a subset of XPath XML path syntax for use in identifying nodes in
  *  parse trees.
  *
- *  Split path into words and separators / and // then walk from left to right.
- *  At each separator-word pair, find set of nodes. Next stage uses those as
- *  work list.
+ *  Split path into words and separators / and // via ANTLR itself then walk
+ *  path elements from left to right.  At each separator-word pair, find set
+ *  of nodes. Next stage uses those as work list.
  *
- *  See {@link org.antlr.v4.test.TestXPath} for descriptions.
+ *  The basic interface is ParseTree.findAll(parser, pathString). But that is
+ *  just shorthand for:
  *
+ *  XPath p = new XPath(parser, xpath);
+ *  return p.evaluate(this);
+ *
+ *  See {@link org.antlr.v4.test.TestXPath} for descriptions. In short, this allows
+ *  operators:
+ *
+ *      /         root
+ *      //        anywhere
+ *      !         invert; this must appear directly after root or anywhere operator
+ *
+ *  and path elements:
+ *
+ *      ID        token name
+ *      'string'  any string literal token from the grammar
+ *      expr      rule name
+ *      *         wildcard matching any node
+ *
+ *  Whitespace is not allowed.
  */
 public class XPath {
 	public static final String WILDCARD = "*"; // word not operator/separator
+	public static final String NOT = "!"; 	   // word for invert operator
 
 	protected String path;
 	protected XPathElement[] elements;
@@ -34,62 +58,116 @@ public class XPath {
 		this.parser = parser;
 		this.path = path;
 		elements = split(path);
-		System.out.println(Arrays.toString(elements));
+//		System.out.println(Arrays.toString(elements));
 	}
 
 	// TODO: check for invalid token/rule names, bad syntax
 
 	public XPathElement[] split(String path) {
-		Pattern pattern = Pattern.compile("//|/|\\w+|'.+?'|\\*"); // TODO: handle escapes in strings?
-		Matcher matcher = pattern.matcher(path);
-		List<String> pathStrings = new ArrayList<String>();
-		while (matcher.find()) {
-			pathStrings.add(matcher.group());
+		ANTLRInputStream in;
+		try {
+			in = new ANTLRInputStream(new StringReader(path));
 		}
-		System.out.println("path="+path+"=>"+pathStrings);
+		catch (IOException ioe) {
+			throw new IllegalArgumentException("Could not read path: "+path, ioe);
+		}
+		XPathLexer lexer = new XPathLexer(in) {
+			public void recover(LexerNoViableAltException e) { throw e;	}
+		};
+		lexer.removeErrorListeners();
+		lexer.addErrorListener(new XPathLexerErrorListener());
+		CommonTokenStream tokenStream = new CommonTokenStream(lexer);
+		try {
+			tokenStream.fill();
+		}
+		catch (LexerNoViableAltException e) {
+			int pos = lexer.getCharPositionInLine();
+			String msg = "Invalid tokens or characters at index "+pos+" in path '"+path+"'";
+			throw new IllegalArgumentException(msg, e);
+		}
+
+		List<Token> tokens = tokenStream.getTokens();
+//		System.out.println("path="+path+"=>"+tokens);
 		List<XPathElement> elements = new ArrayList<XPathElement>();
-		int n = pathStrings.size();
+		int n = tokens.size();
 		int i=0;
+loop:
 		while ( i<n ) {
-			String el = pathStrings.get(i);
-			if ( el.startsWith("/") ) {
-				i++;
-				if ( i>=n ) {
-					System.out.println("missing element name after operator");
-				}
-				String next = pathStrings.get(i);
-				boolean anywhere = el.equals("//");
-				elements.add( getXPathElement(next, anywhere) );
-				i++;
-			}
-			else {
-				elements.add( getXPathElement(el, false) );
-				i++;
+			Token el = tokens.get(i);
+			Token next = null;
+			switch ( el.getType() ) {
+				case XPathLexer.ROOT :
+				case XPathLexer.ANYWHERE :
+					boolean anywhere = el.getType() == XPathLexer.ANYWHERE;
+					i++;
+					next = tokens.get(i);
+					boolean invert = next.getType()==XPathLexer.BANG;
+					if ( invert ) {
+						i++;
+						next = tokens.get(i);
+					}
+					XPathElement pathElement = getXPathElement(next, anywhere);
+					pathElement.invert = invert;
+					elements.add(pathElement);
+					i++;
+				//case XPathLexer.BANG :
+					break;
+
+				case XPathLexer.TOKEN_REF :
+				case XPathLexer.RULE_REF :
+				case XPathLexer.WILDCARD :
+					elements.add( getXPathElement(el, false) );
+					i++;
+					break;
+
+				case Token.EOF :
+					break loop;
+
+				default :
+					throw new IllegalArgumentException("Unknowth path element "+el);
 			}
 		}
 		return elements.toArray(new XPathElement[0]);
 	}
 
 	/** Convert word like * or ID or expr to a path element. anywhere is true
-	 *  if // preceds the word.
+	 *  if // precedes the word.
 	 */
-	protected XPathElement getXPathElement(String word, boolean anywhere) {
+	protected XPathElement getXPathElement(Token wordToken, boolean anywhere) {
+		if ( wordToken.getType()==Token.EOF ) {
+			throw new IllegalArgumentException("Missing path element at end of path");
+		}
+		String word = wordToken.getText();
 		Map<String, Integer> ruleIndexes = Utils.toMap(parser.getRuleNames());
 		Map<String, Integer> tokenTypes = Utils.toMap(parser.getTokenNames());
-		if ( word.equals(WILDCARD) ) {
-			return anywhere ?
-				new XPathWildcardAnywhereElement() :
-				new XPathWildcardElement();
-		}
-		else if ( word.charAt(0)=='\'' || Character.isUpperCase(word.charAt(0)) ) {
-			return anywhere ?
-				new XPathTokenAnywhereElement(word, tokenTypes.get(word)) :
-				new XPathTokenElement(word, tokenTypes.get(word));
-		}
-		else {
-			return anywhere ?
-				new XPathRuleAnywhereElement(word, ruleIndexes.get(word)) :
-				new XPathRuleElement(word, ruleIndexes.get(word));
+		Integer ttype = tokenTypes.get(word);
+		Integer ruleIndex = ruleIndexes.get(word);
+		switch ( wordToken.getType() ) {
+			case XPathLexer.WILDCARD :
+				return anywhere ?
+					new XPathWildcardAnywhereElement() :
+					new XPathWildcardElement();
+			case XPathLexer.TOKEN_REF :
+			case XPathLexer.STRING :
+				if ( ttype==null ) {
+					throw new IllegalArgumentException(word+
+													   " at index "+
+													   wordToken.getStartIndex()+
+													   " isn't a valid token name");
+				}
+				return anywhere ?
+					new XPathTokenAnywhereElement(word, ttype) :
+					new XPathTokenElement(word, ttype);
+			default :
+				if ( ruleIndex==null ) {
+					throw new IllegalArgumentException(word+
+													   " at index "+
+													   wordToken.getStartIndex()+
+													   " isn't a valid rule name");
+				}
+				return anywhere ?
+					new XPathRuleAnywhereElement(word, ruleIndex) :
+					new XPathRuleElement(word, ruleIndex);
 		}
 	}
 
