@@ -1,0 +1,14 @@
+package org.antlr.v4.runtime.tree.xpath;
+
+import org.antlr.v4.runtime.BaseErrorListener;
+import org.antlr.v4.runtime.RecognitionException;
+import org.antlr.v4.runtime.Recognizer;
+
+public class XPathLexerErrorListener extends BaseErrorListener {
+	@Override
+	public void syntaxError(Recognizer<?, ?> recognizer, Object offendingSymbol,
+							int line, int charPositionInLine, String msg,
+							RecognitionException e)
+	{
+	}
+}
