@@ -18,13 +18,12 @@ public class XPathRuleElement extends XPathElement {
 	public Collection<ParseTree> evaluate(ParseTree t) {
 				// return all children of t that match nodeName
 		List<ParseTree> nodes = new ArrayList<ParseTree>();
-		if ( t.getChildren()==null) {
-			System.out.println();
-		}
 		for (ParseTree c : t.getChildren()) {
 			if ( c instanceof ParserRuleContext ) {
 				ParserRuleContext ctx = (ParserRuleContext)c;
-				if ( ctx.getRuleIndex() == ruleIndex ) {
+				if ( (ctx.getRuleIndex() == ruleIndex && !invert) ||
+					 (ctx.getRuleIndex() != ruleIndex && invert) )
+				{
 					nodes.add(c);
 				}
 			}
